// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSection is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderSection euiHeaderSection--left testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiHeaderSection side defaults to left 1`] = `
<div
  class="euiHeaderSection euiHeaderSection--left"
/>
`;

exports[`EuiHeaderSection side renders right 1`] = `
<div
  class="euiHeaderSection euiHeaderSection--right"
/>
`;
